[build-system]
requires = ["setuptools>=61.2", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "rw-workspace-utils"
readme = "README.md"
license = { text = "Apache License 2.0" }
description = "RunWhen workspace utilities"
authors = [
    { name = "RunWhen", email = "info@runwhen.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]
dynamic = ["version", "dependencies"]

[tool.setuptools.packages.find]
where = ["libraries"] 

[tool.setuptools.dynamic]
version = { file = "VERSION" }
dependencies = { file = "requirements.txt" }

[project.urls]
homepage = "https://github.com/runwhen-contrib/rw-workspace-utils"